<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_profile">
        <svarzee.android.apps.adb_mouse.EditableListPreference
            app:iconSpaceReserved="false"
            app:key="profile"
            app:title="@string/profile"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/network_settings">
        <Preference
            app:iconSpaceReserved="false"
            app:key="search_automatically"
            app:title="@string/search_automatically"/>
        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="ip"
            app:title="@string/ip_address"
            app:useSimpleSummaryProvider="true"/>
        <EditTextPreference
            app:defaultValue="5555"
            app:iconSpaceReserved="false"
            app:key="port"
            app:title="@string/port"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/interface_settings">
        <SeekBarPreference
            app:defaultValue="50"
            app:iconSpaceReserved="false"
            app:key="mouse_sensitivity"
            app:title="@string/mouse_sensitivity"
            app:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            app:iconSpaceReserved="false"
            app:key="horizontal_orientation"
            app:title="@string/horizontal_orientation"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/support">
        <Preference
            app:iconSpaceReserved="false"
            app:key="supporter_subscription"
            app:summary="@string/supporter_description"
            app:title="@string/become_a_supporter"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/help">
        <Preference
            app:iconSpaceReserved="false"
            app:key="show_help"
            app:title="@string/show_help"/>
    </PreferenceCategory>
</PreferenceScreen>
