<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/relative_layout_pad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/image_view_mouse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_mouse_24"
                android:layout_above="@+id/linear_layout_status"
                android:contentDescription="@string/mouse_view_description"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/linear_layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:id="@+id/image_view_status"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_settings_remote_24"
                    android:scaleType="fitEnd"
                    android:contentDescription="@string/image_view_status_description"
                    android:layout_marginEnd="2dp"
                    app:tint="@color/status_error"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/status_error"
                    android:id="@+id/text_view_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <svarzee.android.apps.adb_mouse.DpadView
                android:id="@+id/dpad_view"
                android:visibility="invisible"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/dpad_button_description"
                android:alpha="0.95"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/linear_layout_bot"
            android:background="?attr/bottomButtonsBarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <Button
                android:id="@+id/settings_button"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/settings_button_description"
                app:icon="@drawable/baseline_settings_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:enabled="false"
                android:id="@+id/toggle_dpad_button"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/dpad_button_description"
                app:icon="@drawable/ic_dpad"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:enabled="false"
                android:id="@+id/home_button"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/home_button_description"
                app:icon="@drawable/baseline_home_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:enabled="false"
                android:id="@+id/keyboard"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:contentDescription="@string/keyboard_button_description"
                app:icon="@drawable/baseline_keyboard_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
